2008-04-02  Vincent Untz  <vuntz@gnome.org>

	Fix crash when closing the clock window while a city is blinking on the
	map. Fix bug #519493.
	Also improve things a bit if you click quickly on two cities.

	* clock-map.c: (clock_map_init): add a timeout id for the blinking
	(clock_map_finalize): stop blinking. This fixes the crash
	(highlight): simplify a bit because of the destroy handler
	(highlight_destroy): new, destroy handler for the timeout
	(clock_map_blink_location): if there was already something blinking,
	stop it first. Add a destroy handler for the timeout.

2008-04-02  Vincent Untz  <vuntz@gnome.org>

	* set-timezone.c: (can_do): initialize variables at the beginning of
	the function, so that we don't crash because of unitiliazed variables
	after a goto.
	Should fix bug #522538, bug #523643.

2008-03-28  Matthias Clasen  <mclasen@redhat.com>

	* clock.c: Fix issues with adding/removing locations, pointed
	out by Dan Winship. This regression was introduced in the 
	commit on 2008-03-14.

2008-03-28  Matthias Clasen  <mclasen@redhat.com>

	* clock.glade:
	* clock.c: Do the same conversion to GtkDialog for the edit
	and find location windows.

2008-03-27  Matthias Clasen  <mclasen@redhat.com>

	* clock.glade: Convert the set-time window into a dialog, to
	make Esc work, pointed out by Dan Winship. 

	* clock.c (ensure_time_settings_window): Handle delete events.

2008-03-27  Matthias Clasen  <mclasen@redhat.com>

	* clock.glade: Make the find-location window larger. 
	Change proposed by Dan Winship.

2008-03-14  Matthias Clasen  <mclasen@redhat.com>

	* clock.c (fill_prefs_window): Make sure that we create the
	cities store before we fill the preference window. 

2008-03-13  William Lachance  <wrlach@gmail.com>

	* clock.c: (find_entry_changed): Fix crash when there are no
	locations available. Fixes bug #521563.

==================== 2.22.0 ====================

2008-03-05  Jens Granseuer  <jensgr@gmx.net>

	* clock-face.c: (update_timeofday):